<resources>
    <string name="app_name">Cocktails</string>
    <string name="favourite">Favourite</string>
    <string name="search_drinks">Search Drinks</string>
    <string name="drinks">Drinks</string>
    <string name="collections">Collection</string>
    <string name="all">All</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="non_alcoholic">Non-alcoholic</string>
    <string name="more">More</string>
    <string name="next">Next</string>
    <string name="drink_thumb">Drink thumb</string>
    <string name="ingredient_thumb_one">Ingredient thumb one</string>
    <string name="ingredient_thumb_two">Ingredient thumb two</string>
    <string name="ingredient_thumb_three">Ingredient thumb three</string>
    <string name="ordinary_drinks">Ordinary Drinks</string>
    <string name="more_cocktails">More cocktails</string>
    <string name="more_ordinary_drinks">More ordinary drinks</string>
    <string name="ingredients">Ingredients</string>
    <string name="name">Name</string>
    <string name="search_icon">Search Icon</string>
    <string name="settings">Settings</string>
    <string name="drink_transition_name">drink transition name</string>
    <string name="ingredient_thumb">ingredient thumb</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredient_absent">No ingredient found, checking online…</string>
    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="close_button">close button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_title">Default theme action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general">General</string>
    <string name="favorites">favorites</string>
</resources>