<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    app:layoutDescription="@xml/activity_ingredient_detail_scene"
    tools:context=".ui.ingredient_detail.IngredientDetailFragment">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/close_button"
        android:src="@drawable/ic_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ingredient_thumb"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ingredient_thumb"
        android:scaleType="centerCrop"
        android:transitionName="Ingredient image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/gotham_bold"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:transitionName="Ingredient name"
        app:layout_constraintStart_toEndOf="@+id/ingredient_thumb"
        app:layout_constraintTop_toTopOf="@+id/ingredient_thumb"
        tools:text="Name" />

    <TextView
        android:id="@+id/ingredient_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.8"
        android:fontFamily="@font/gotham_book"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/ingredient_name"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_name"
        tools:text="Type" />

    <TextView
        android:id="@+id/alcoholic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="1"
        android:fontFamily="@font/gotham_book"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/ingredient_type"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_type"
        tools:text="Alcoholic" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ingredient_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/ingredient_thumb"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_thumb">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/gotham_bold"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gotham_book"
                android:lineSpacingExtra="2sp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/description_label"
                app:layout_constraintTop_toBottomOf="@+id/description_label"
                tools:text="Description text" />

            <TextView
                android:id="@+id/drinks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gotham_bold"
                android:text="@string/drinks"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?attr/actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drinks_label"
                tools:listitem="@layout/drink_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>